# bs

./: .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  input.txt  main.cpp  small.txt
include/bs/: graph.hpp  spec.hpp
